Fix overflowing text.

--- a/_sass/theme.scss
+++ b/_sass/theme.scss
@@ -158,12 +158,13 @@ section#background {
 .news-item h5 {
   text-transform: uppercase;
   font-size: 36px;
-  float: left;
   margin: 0 10px 0 0;
 }
 
 .news .content {
   height: 150px;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .see-more h5 {
@@ -172,14 +173,21 @@ section#background {
 
 .see-more .content {
     text-align: center;
+    overflow: initial;
 }
 
 .btn-fb {
-    border-radius: 3px;
-    margin: 20px;
-    background-color: #3b5998;
-    border-color: #3b5998;
-    font-size: 20px;
+  border-radius: 0;
+  margin: 0;
+  margin-top: 20px;
+  background-color: #3b5998;
+  border-color: #3b5998;
+  font-size: 20px;
+  width: 100%;
+}
+
+.btn-fb:hover {
+  background-color: #3b5998;
 }
 
 @media (max-width: 768px) {
